<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_fragment_read_article"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_read_article_banner" />

    <TextView
        android:id="@+id/tv_read_article_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/fragment_read_article_tv_banner"
        android:textSize="17sp"
        android:textColor="@color/colorRed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_read_article_recom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="34dp"
        android:text="@string/fragment_read_article_tv_recom"
        android:textColor="@color/colorRed"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vp_fragment_read_article" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_point_one" />

    <com.example.exam.view.widget.PullToDo
        android:id="@+id/read_pull_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_read_article_recom"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:orientation="vertical">

            <com.example.exam.view.widget.RoundImageView
                android:id="@+id/iv_pull_to_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:src="@drawable/ic_down_refresh" />

            <TextView
                android:id="@+id/tv_pull_to_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pull_to_refresh_little" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_read"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="413dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_read_article_recom"
            app:layout_constraintVertical_bias="0.0" />
    </com.example.exam.view.widget.PullToDo>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/fragment_read_article_tv_title"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="179dp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginTop="8dp"
        android:background="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.example.exam.view.widget.LoadingImageView
        android:id="@+id/iv_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toTopOf="@+id/read_pull_to_refresh"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <ImageView
        android:id="@+id/iv_point_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/tv_read_article_recom"
        app:layout_constraintTop_toBottomOf="@+id/vp_fragment_read_article"
        app:srcCompat="@drawable/ic_point_unselected" />

    <ImageView
        android:id="@+id/iv_point_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/iv_point_one"
        app:layout_constraintTop_toBottomOf="@+id/vp_fragment_read_article"
        app:srcCompat="@drawable/ic_point_unselected" />

    <ImageView
        android:id="@+id/iv_point_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/iv_point_two"
        app:layout_constraintTop_toBottomOf="@+id/vp_fragment_read_article"
        app:srcCompat="@drawable/ic_point_unselected" />

    <ImageView
        android:id="@+id/iv_point_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/iv_point_three"
        app:layout_constraintTop_toBottomOf="@+id/vp_fragment_read_article"
        app:srcCompat="@drawable/ic_point_unselected" />

</androidx.constraintlayout.widget.ConstraintLayout>